gccida/g1/try_copy_prop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10431:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10431:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10433:4: error: expected ';' after expression
rtx x; // [rsp+18h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10433:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+18h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10450:15: error: expected expression
v10 = *( rtx *)( v6 + 32); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10451:58: error: expected ')'
if ( *( _WORD *)v10 == 47 || ( v10 = single_set_2( ( rtx)v6, v10)) != 0LL ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10451:50: note: to match this '('
if ( *( _WORD *)v10 == 47 || ( v10 = single_set_2( ( rtx)v6, v10)) != 0LL ) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10453:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v10->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10468:1: error: use of undeclared identifier 'x'
x = ( rtx)v6; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10472:16: error: use of undeclared identifier 'x'
for_each_rtx( &x, replace_loop_reg, &arg); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10477:22: error: expected expression
note_stores( *( rtx *)( v6 + 32), note_reg_stored, &arg); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10482:38: error: expected ')'
v12 = next_insn_in_loop( loop, ( rtx)v6); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10482:24: note: to match this '('
v12 = next_insn_in_loop( loop, ( rtx)v6); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10495:33: error: expected ')'
reg_note = find_reg_note( ( rtx)v6, REG_EQUAL, 0LL); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10495:25: note: to match this '('
reg_note = find_reg_note( ( rtx)v6, REG_EQUAL, 0LL); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10498:20: error: expected ')'
remove_note( ( rtx)v6, v15); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10498:12: note: to match this '('
remove_note( ( rtx)v6, v15); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10512:1: error: use of undeclared identifier 'v17'
v17 = find_reg_note( v9, REG_RETVAL, 0LL); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10514:6: error: use of undeclared identifier 'v17'
if ( v17 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10515:7: error: use of undeclared identifier 'v17'; did you mean 'v10'?
rtx = v17->fld[0].rtx; 
      ^~~
      v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/loop.c:10424:5: note: 'v10' declared here
rtx v10; // rsi 
    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_copy_prop/src/obj/loop.o] Error 1
